--- a/Basic_C#_Programs/Income/carInsurance/carInsurance/carInsurance.csproj
+++ b/Basic_C#_Programs/Income/carInsurance/carInsurance/carInsurance.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8B3ACABF-E932-4BD6-8636-B9E721D60BBD}</ProjectGuid>
+    <ProjectGuid>{4686230C-84B6-46ED-9E74-75A8A9CC7DCF}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>incomeComparison</RootNamespace>
-    <AssemblyName>incomeComparison</AssemblyName>
+    <RootNamespace>carInsurance</RootNamespace>
+    <AssemblyName>carInsurance</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
