--- a/Basic_C#_Programs/datetimeAssignment/datetimeAssignment/datetimeAssignment.csproj
+++ b/Basic_C#_Programs/datetimeAssignment/datetimeAssignment/datetimeAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3DE39E9C-3E23-41E0-93CC-329739D11D2A}</ProjectGuid>
+    <ProjectGuid>{CF627C69-C2F6-47D9-88CF-9DDF2221B031}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>GameTwentyOne</RootNamespace>
-    <AssemblyName>GameTwentyOne</AssemblyName>
+    <RootNamespace>datetimeAssignment</RootNamespace>
+    <AssemblyName>datetimeAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,17 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Dealer.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="IWalkAway.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwentyOne.cs" />
-    <Compile Include="TwentyOneDealer.cs" />
-    <Compile Include="TwentyOneRules.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
